--- a/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
+++ b/FrontEnd/ClientApp/src/app/sidebar/sidebar.component.html
@@ -110,9 +110,33 @@
               </a>
             </li>
             <li>
+              <a [routerLink]='["/ranking/scoredGoalsHome"]'>
+                <i class="metismenu-icon"></i>
+                Classifica miglior attacco in casa
+              </a>
+            </li>
+            <li>
+              <a [routerLink]='["/ranking/scoredGoalsAway"]'>
+                <i class="metismenu-icon"></i>
+                Classifica miglior attacco in trasferta
+              </a>
+            </li>
+            <li>
               <a [routerLink]='["/ranking/concededGoals"]'>
                 <i class="metismenu-icon"></i>
                 Classifica miglior difesa
+              </a>
+            </li>
+            <li>
+              <a [routerLink]='["/ranking/concededGoalsHome"]'>
+                <i class="metismenu-icon"></i>
+                Classifica miglior difesa in casa
+              </a>
+            </li>
+            <li>
+              <a [routerLink]='["/ranking/concededGoalsAway"]'>
+                <i class="metismenu-icon"></i>
+                Classifica miglior difesa in trasferta
               </a>
             </li>
           </ul>
