--- a/FrontEnd/ClientApp/src/app/ranking/ranking.component.html
+++ b/FrontEnd/ClientApp/src/app/ranking/ranking.component.html
@@ -7,13 +7,14 @@
           <div class="card-header">
             CLASSIFICA
             <!--<div class="btn-actions-pane-right">
-            <div role="group" class="btn-group-sm btn-group">
-              <button class="active btn btn-focus">Last Week</button>
-              <button class="btn btn-focus">All Month</button>
-            </div>
-          </div>-->
+              <div role="group" class="btn-group-sm btn-group">
+                <button class="active btn btn-focus">Last Week</button>
+                <button class="btn btn-focus">All Month</button>
+              </div>
+            </div>-->
           </div>
-          <div class="table-responsive">
+
+          <div class="table-responsive card-body">
             <table class="align-middle mb-0 table table-borderless table-striped table-hover">
               <thead>
                 <tr>
@@ -45,12 +46,18 @@
               </tbody>
             </table>
           </div>
-          <!--<div class="d-block text-center card-footer">
-          <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
-          <button class="btn-wide btn btn-success">Save</button>
-        </div>-->
+
+          <div class="d-block text-right card-footer">
+            <!--<button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
+            <button class="btn-wide btn btn-success">Save</button>-->
+            <button class="btn btn-primary" type="button" (click)="exportPdf()"><i class="fas fa-print mr-2"></i>Stampa</button>
+          </div>
         </div>
       </div>
+    </div>
+
+    <div class="row">
+
     </div>
 
   </div>
