--- a/FrontEnd/ClientApp/src/app/transfers/transfers.component.html
+++ b/FrontEnd/ClientApp/src/app/transfers/transfers.component.html
@@ -37,11 +37,11 @@
                   <td class="text-center">{{t.teamOld}}</td>
                   <td class="text-center">{{t.teamNew}}</td>
                   <td class="text-center">{{t.date}}</td>
-                  <!--<td class="text-center">
-                    <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailTeam(team.id)">
-                      <i class="pe-7s-pen"></i>
+                  <td class="text-center">
+                    <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailPlayer(t.idPlayer)">
+                      <i class="fas fa-search"></i>
                     </button>
-                  </td>-->
+                  </td>
                 </tr>
               </tbody>
             </table>
