--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -33,12 +33,12 @@
               </a>
             </li>
             <li class="nav-item">
-              <a role="tab" class="nav-link" id="tab-4" data-toggle="tab" href="#tab-content-4">
+              <a role="tab" class="nav-link" id="tab-3" data-toggle="tab" href="#tab-content-4">
                 <span>Marcatori</span>
               </a>
             </li>
             <li class="nav-item">
-              <a role="tab" class="nav-link" id="tab-5" data-toggle="tab" href="#tab-content-5">
+              <a role="tab" class="nav-link" id="tab-4" data-toggle="tab" href="#tab-content-5">
                 <span>Sostituzioni</span>
               </a>
             </li>
@@ -65,15 +65,44 @@
               </div>
             </div>
 
-            <!-- tab 4 -->
-            <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
+            <!-- tab 3 -->
+            <div class="tab-pane tabs-animation fade" id="tab-content-3" role="tabpanel">
               <div class="row" style="background-color:yellow">
-                <p>TAB 4</p>
+                <div class="col-md-12">
+                  <div class="mb-3 card">
+                    <div class="card-header-tab card-header">
+                      <ul class="nav">
+                        <li class="nav-item"><a data-toggle="tab" href="#tab-home" class="active nav-link">{{game.teamHome}}</a></li>
+                        <li class="nav-item"><a data-toggle="tab" href="#tab-away" class="nav-link">{{game.teamAway}}</a></li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="card-body">
+                    <div class="tab-content">
+                      <div class="tab-pane active" id="tab-home" role="tabpanel">
+                        <div class="col-md-12" *ngFor="let item of game.golTeamHome">                  
+                          <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
+                            <option *ngFor="let p of playersHome" [value]="p.id">{{p.fullname}}</option>
+                          </select>                                                    
+                        </div>
+                      </div>
+
+                      <div class="tab-pane" id="tab-away" role="tabpanel">
+                        <div class="col-md-12" *ngFor="let item of game.golTeamAway">                  
+                          <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
+                            <option *ngFor="let p of playersAway" [value]="p.id">{{p.fullname}}</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
 
-            <!-- tab 5 -->
-            <div class="tab-pane tabs-animation fade" id="tab-content-5" role="tabpanel">
+            <!-- tab 4 -->
+            <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
               <div class="row" style="background-color:pink">
                 TAB 5
               </div>
