--- a/FrontEnd/ClientApp/src/app/calendar/calendar.component.html
+++ b/FrontEnd/ClientApp/src/app/calendar/calendar.component.html
@@ -7,46 +7,20 @@
         <h5 class="card-title">CALENDARIO</h5>
 
         <div class="row">
-          <div class="col-md-12 col-lg-6">
+          <div class="col-md-6 col-lg-6" *ngFor="let r of rounds">
             <div class="mb-3 card">
               <div class="card-header-tab card-header-tab-animation card-header">
                 <div class="card-header-title">
-                  1° giornata
+                  {{r.number}}° giornata
                 </div>
               </div>
               <div class="card-body">
                 <table class="mb-0 table table-sm">
                   <tbody>
-                    <tr>
-                      <td class="text-right">CASA</td>
-                      <td class="text-center">1 - 1</td>
-                      <td class="text-left">TRASFERTA</td>
-                      <!--<td>
-                        <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailGame(game.idGame)">
-                          <i class="fas fa-search"></i>
-                        </button>
-                      </td>-->
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-12 col-lg-6">
-            <div class="mb-3 card">
-              <div class="card-header-tab card-header-tab-animation card-header">
-                <div class="card-header-title">
-                  2° giornata
-                </div>
-              </div>
-              <div class="card-body">
-                <table class="mb-0 table table-sm">
-                  <tbody>
-                    <tr>
-                      <td class="text-right">CASA</td>
-                      <td class="text-center">1 - 1</td>
-                      <td class="text-left">TRASFERTA</td>
+                    <tr *ngFor="let g of r.games">
+                      <td class="text-right">{{g.teamHome}}</td>
+                      <td class="text-center">{{g.golHome}} - {{g.golAway}}</td>
+                      <td class="text-left">{{g.teamAway}}</td>
                       <!--<td>
                         <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailGame(game.idGame)">
                           <i class="fas fa-search"></i>
