--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -33,12 +33,12 @@
               </a>
             </li>
             <li class="nav-item">
-              <a role="tab" class="nav-link" id="tab-3" data-toggle="tab" href="#tab-content-4">
+              <a role="tab" class="nav-link" id="tab-3" data-toggle="tab" href="#tab-content-3">
                 <span>Marcatori</span>
               </a>
             </li>
             <li class="nav-item">
-              <a role="tab" class="nav-link" id="tab-4" data-toggle="tab" href="#tab-content-5">
+              <a role="tab" class="nav-link" id="tab-4" data-toggle="tab" href="#tab-content-4">
                 <span>Sostituzioni</span>
               </a>
             </li>
@@ -49,11 +49,15 @@
 
             <!-- tab 1 -->
             <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
-              <div class="row">
-                <div class="col-md-12" *ngFor="let item of numbers; let i = index">                  
-                  <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="selectedPlayers[i]" (change)="onChange($event)">
-                    <option *ngFor="let p of playersHome" [value]="p.id">{{p.fullname}}</option>
-                  </select>
+              <div class="row" *ngIf="formationHome.length != 0">
+                <div class="col-md-12" *ngFor="let item of numbers; let i = index">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="formationHome[i]" (change)="onChange($event)">
+                        <option *ngFor="let p of playersHome" [value]="p.id" [selected]="playerIsSelected(p.id)">{{p.fullname}}</option>
+                      </select>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -72,7 +76,7 @@
                   <div class="mb-3 card">
                     <div class="card-header-tab card-header">
                       <ul class="nav">
-                        <li class="nav-item"><a data-toggle="tab" href="#tab-home" class="active nav-link">{{game.teamHome}}</a></li>
+                        <li class="nav-item"><a data-toggle="tab" href="#tab-home" class="nav-link active show">{{game.teamHome}}</a></li>
                         <li class="nav-item"><a data-toggle="tab" href="#tab-away" class="nav-link">{{game.teamAway}}</a></li>
                       </ul>
                     </div>
@@ -81,34 +85,36 @@
                   <div class="card-body">
                     <div class="tab-content">
                       <div class="tab-pane active" id="tab-home" role="tabpanel">
-                        <div class="col-md-12" *ngFor="let item of game.golTeamHome">                  
-                          <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
+                        <div class="col-md-12" *ngFor="let item of game.golTeamHome">
+                          <select name="select-team-home" id="select-team-home" class="form-control col-md-6" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
                             <option *ngFor="let p of playersHome" [value]="p.id">{{p.fullname}}</option>
-                          </select>                                                    
+                          </select>
+                          <input type="text" class="col-md-2" />
+                          <input type="text" class="col-md-4" />
                         </div>
                       </div>
 
-                      <div class="tab-pane" id="tab-away" role="tabpanel">
-                        <div class="col-md-12" *ngFor="let item of game.golTeamAway">                  
-                          <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
-                            <option *ngFor="let p of playersAway" [value]="p.id">{{p.fullname}}</option>
-                          </select>
+                      <!-- <div class="tab-pane" id="tab-away" role="tabpanel">
+                            <div class="col-md-12" *ngFor="let item of game.golTeamAway">
+                              <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
+                                <option *ngFor="let p of playersAway" [value]="p.id">{{p.fullname}}</option>
+                              </select>
+                            </div>
+                          </div>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
-              </div>
-            </div>
 
-            <!-- tab 4 -->
-            <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
-              <div class="row" style="background-color:pink">
-                TAB 5
+                <!-- tab 4 -->
+                <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
+                  <div class="row" style="background-color:pink">
+                    TAB 5
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-  </div>
-</div>
