--- a/FrontEnd/ClientApp/src/app/game/game.component.html
+++ b/FrontEnd/ClientApp/src/app/game/game.component.html
@@ -87,7 +87,6 @@
           <button class="btn btn-danger mr-2" type="submit" (click)="undo()" *ngIf="!isReadOnly"><i class="fas fa-undo mr-2"></i>Annulla</button>
 
           <button class="btn btn-primary mr-2" type="submit" (click)="update()" *ngIf="isReadOnly"><i class="fas fa-edit mr-2"></i>Modifica</button>
-          <button class="btn btn-primary mr-2" type="submit" (click)="updateInfo()" *ngIf="isReadOnly"><i class="fas fa-edit mr-2"></i>Modifica Info</button>
         </form>
       </div>
     </div>
@@ -101,7 +100,7 @@
           <div class="col-md-6">
             <table class="table table-borderless table-striped table-hover">
               <tr>
-                <td>#</td>
+                <td></td>
                 <td>GIOCATORE</td>
                 <td>GOL</td>
                 <td>SOS OUT</td>
@@ -123,7 +122,7 @@
           <div class="col-md-6">
             <table class="table table-borderless table-striped table-hover">
               <tr>
-                <td>#</td>
+                <td></td>
                 <td>GIOCATORE</td>
                 <td>GOL</td>
                 <td>SOS OUT</td>
@@ -145,9 +144,10 @@
         </div>
       </div>
 
-      <div class="d-block text-right card-footer">
+      <div class="d-block card-footer">
         <!--<button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
         <button class="btn-wide btn btn-success">Save</button>-->
+        <button class="btn btn-primary mr-2" type="submit" (click)="updateInfo()" *ngIf="isReadOnly"><i class="fas fa-edit mr-2"></i>Modifica Info</button>
         <button class="btn btn-primary" type="button" (click)="exportPdf()"><i class="fas fa-print mr-2"></i>Stampa</button>
       </div>
     </div>
