--- a/FrontEnd/ClientApp/src/app/players/players.component.html
+++ b/FrontEnd/ClientApp/src/app/players/players.component.html
@@ -41,7 +41,7 @@
                   <td>{{player.roleString}}</td>                  
                   <td class="text-center">
                     <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailPlayer(player.id)">
-                      <i class="pe-7s-pen"></i>
+                      <i class="fas fa-search"></i>
                     </button>
                   </td>
                 </tr>
