--- a/FrontEnd/ClientApp/src/app/ranking/ranking.component.html
+++ b/FrontEnd/ClientApp/src/app/ranking/ranking.component.html
@@ -31,8 +31,8 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let r of ranking">
-                  <td class="text-center text-muted">#345</td>
+                <tr *ngFor="let r of ranking; let i = index">
+                  <td class="text-center">{{i + 1}}</td>
                   <td class="text-center">{{r.team}}</td>
                   <td class="text-center">{{r.points}}</td>
                   <td class="text-center">{{r.games}}</td>
@@ -41,7 +41,7 @@
                   <td class="text-center">{{r.losts}}</td>
                   <td class="text-center">{{r.goalMade}}</td>
                   <td class="text-center">{{r.goalConceded}}</td>
-                  <td class="text-center">{{r.goalDifference}}</td>
+                  <td class="text-center">{{r.goalMade - r.goalConceded}}</td>
                 </tr>
               </tbody>
             </table>
