--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -49,13 +49,22 @@
 
             <!-- tab 1 -->
             <div class="tab-pane tabs-animation fade show active" id="tab-content-1" role="tabpanel">
-              <div class="row" *ngIf="formationHome.length != 0">
+              <div class="row" *ngIf="formationHome.length != 0 && playersHome.length != 0">
                 <div class="col-md-12" *ngFor="let item of numbers; let i = index">
                   <div class="row">
-                    <div class="col-md-4">
-                      <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="formationHome[i]" (change)="onChange($event)">
-                        <option *ngFor="let p of playersHome" [value]="p.id" [selected]="playerIsSelected(p.id)">{{p.fullname}}</option>
-                      </select>
+                    <div class="col-md-6">
+                      <table>
+                        <tr>
+                          <td style="width:25px;">
+                            {{item}}
+                          </td>
+                          <td>
+                            <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="formationHome[i]" (change)="onChange($event, i)">
+                              <option *ngFor="let p of playersHome" [ngValue]="p" [selected]="playerIsSelected(p.id, i)">{{p.fullname}}</option>
+                            </select>
+                          </td>
+                        </tr>
+                      </table>
                     </div>
                   </div>
                 </div>
@@ -84,7 +93,7 @@
 
                   <div class="card-body">
                     <div class="tab-content">
-                      <div class="tab-pane active" id="tab-home" role="tabpanel">
+                      <!--<div class="tab-pane active" id="tab-home" role="tabpanel">
                         <div class="col-md-12" *ngFor="let item of game.golTeamHome">
                           <select name="select-team-home" id="select-team-home" class="form-control col-md-6" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
                             <option *ngFor="let p of playersHome" [value]="p.id">{{p.fullname}}</option>
@@ -92,8 +101,7 @@
                           <input type="text" class="col-md-2" />
                           <input type="text" class="col-md-4" />
                         </div>
-                      </div>
-
+                      </div>-->
                       <!-- <div class="tab-pane" id="tab-away" role="tabpanel">
                             <div class="col-md-12" *ngFor="let item of game.golTeamAway">
                               <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
@@ -106,11 +114,20 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
 
-                <!-- tab 4 -->
-                <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
-                  <div class="row" style="background-color:pink">
-                    TAB 5
+            <!-- tab 4 -->
+            <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
+              <div class="row" style="background-color:pink">
+                <div class="col-md-12">
+                  <div class="mb-3 card">
+                    <div class="card-header-tab card-header">
+                      <ul class="nav">
+                        <li class="nav-item"><a data-toggle="tab" href="#tab-home" class="nav-link active show">{{game.teamHome}}</a></li>
+                        <li class="nav-item"><a data-toggle="tab" href="#tab-away" class="nav-link">{{game.teamAway}}</a></li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -118,3 +135,11 @@
           </div>
         </div>
       </div>
+
+      <div class="d-block card-footer">
+        <button class="btn btn-primary mr-2" type="submit" (click)="save()"><i class="fas fa-save mr-2"></i>Salva</button>
+        <button class="btn btn-danger" type="button" (click)="undo()"><i class="fas fa-undo mr-2"></i>Annulla</button>
+      </div>
+    </div>
+  </div>
+</div>
