--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -60,7 +60,7 @@
                           </td>
                           <td>
                             <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="formationHome[i]" (change)="onChange($event, i)">
-                              <option *ngFor="let p of playersHome" [ngValue]="p" [selected]="playerIsSelected(p.id, i)">{{p.fullname}}</option>
+                              <option *ngFor="let p of playersHome" [ngValue]="p" [selected]="playerIsSelected(formationHome, p.id, i)">{{p.fullname}}</option>
                             </select>
                           </td>
                         </tr>
@@ -73,8 +73,25 @@
 
             <!-- tab 2 -->
             <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
-              <div class="row" style="background-color:deepskyblue">
-                TAB 2
+              <div class="row" *ngIf="formationAway.length != 0 && playersAway.length != 0">
+                <div class="col-md-12" *ngFor="let item of numbers; let i = index">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <table>
+                        <tr>
+                          <td style="width:25px;">
+                            {{item}}
+                          </td>
+                          <td>
+                            <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="formationAway[i]" (change)="onChange($event, i)">
+                              <option *ngFor="let p of playersAway" [ngValue]="p" [selected]="playerIsSelected(formationAway, p.id, i)">{{p.fullname}}</option>
+                            </select>
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
 
