--- a/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
+++ b/FrontEnd/ClientApp/src/app/game-info/game-info.component.html
@@ -37,11 +37,11 @@
                 <span>Marcatori</span>
               </a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a role="tab" class="nav-link" id="tab-4" data-toggle="tab" href="#tab-content-4">
                 <span>Sostituzioni</span>
               </a>
-            </li>
+            </li>-->
           </ul>
 
           <!-- contenuto del tab -->
@@ -59,7 +59,7 @@
                             {{item}}
                           </td>
                           <td>
-                            <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="formationHome[i]" (change)="onChange($event, i)">
+                            <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="formationHome[i]">
                               <option *ngFor="let p of playersHome" [ngValue]="p" [selected]="playerIsSelected(formationHome, p.id, i)">{{p.fullname}}</option>
                             </select>
                           </td>
@@ -83,7 +83,7 @@
                             {{item}}
                           </td>
                           <td>
-                            <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="formationAway[i]" (change)="onChange($event, i)">
+                            <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="formationAway[i]">
                               <option *ngFor="let p of playersAway" [ngValue]="p" [selected]="playerIsSelected(formationAway, p.id, i)">{{p.fullname}}</option>
                             </select>
                           </td>
@@ -96,8 +96,8 @@
             </div>
 
             <!-- tab 3 -->
-            <div class="tab-pane tabs-animation fade" id="tab-content-3" role="tabpanel">
-              <div class="row" style="background-color:yellow">
+            <div class="tab-pane tabs-animation fade" id="tab-content-3" role="tabpanel" *ngIf="game">
+              <div class="row">
                 <div class="col-md-12">
                   <div class="mb-3 card">
                     <div class="card-header-tab card-header">
@@ -108,42 +108,35 @@
                     </div>
                   </div>
 
-                  <div class="card-body">
+                  <div class="card-body" *ngIf="playerScorersAway.length != 0 && scorersAway.length != 0">
                     <div class="tab-content">
-                      <!--<div class="tab-pane active" id="tab-home" role="tabpanel">
-                        <div class="col-md-12" *ngFor="let item of game.golTeamHome">
-                          <select name="select-team-home" id="select-team-home" class="form-control col-md-6" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
-                            <option *ngFor="let p of playersHome" [value]="p.id">{{p.fullname}}</option>
-                          </select>
-                          <input type="text" class="col-md-2" />
-                          <input type="text" class="col-md-4" />
-                        </div>
-                      </div>-->
-                      <!-- <div class="tab-pane" id="tab-away" role="tabpanel">
-                            <div class="col-md-12" *ngFor="let item of game.golTeamAway">
-                              <select name="select-team-home" id="select-team-home" class="form-control" [(ngModel)]="scorerPlayers[i]" (change)="onChange($event)">
-                                <option *ngFor="let p of playersAway" [value]="p.id">{{p.fullname}}</option>
-                              </select>
+                      <div class="tab-pane active" id="tab-home" role="tabpanel">
+                        <div class="col-md-12" *ngFor="let item of golAway; let i = index">
+                          <div class="row">
+                            <div class="col-md-6">
+                              <table>
+                                <tr>
+                                  <td>
+                                    <select name="select-team-home" id="select-team-home" class="form-control mt-1" [(ngModel)]="playerScorersAway[i]">
+                                      <option *ngFor="let p of playersAway" [ngValue]="p" [selected]="playerIsSelected(playerScorersAway, p.id, i)">{{p.fullname}}</option>
+                                    </select>
+                                  </td>
+                                  <td>
+                                    <input type="text" maxlength="2" class="form-control" id="minuteHome" placeholder="" [(ngModel)]="scorersAway[i].minute" name="minuteHome" #ctrl="ngModel">
+                                  </td>
+                                  <td>
+                                    <input type="text" class="form-control" id="descriptionHome" placeholder="" [(ngModel)]="scorersAway[i].description" name="minuteHome" #ctrl="ngModel">
+                                  </td>
+                                </tr>
+                              </table>
                             </div>
                           </div>
                         </div>
-                      </div> -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+                      </div>
 
-            <!-- tab 4 -->
-            <div class="tab-pane tabs-animation fade" id="tab-content-4" role="tabpanel">
-              <div class="row" style="background-color:pink">
-                <div class="col-md-12">
-                  <div class="mb-3 card">
-                    <div class="card-header-tab card-header">
-                      <ul class="nav">
-                        <li class="nav-item"><a data-toggle="tab" href="#tab-home" class="nav-link active show">{{game.teamHome}}</a></li>
-                        <li class="nav-item"><a data-toggle="tab" href="#tab-away" class="nav-link">{{game.teamAway}}</a></li>
-                      </ul>
+                      <div class="tab-pane" id="tab-away" role="tabpanel">
+
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -152,11 +145,11 @@
           </div>
         </div>
       </div>
-
-      <div class="d-block card-footer">
-        <button class="btn btn-primary mr-2" type="submit" (click)="save()"><i class="fas fa-save mr-2"></i>Salva</button>
-        <button class="btn btn-danger" type="button" (click)="undo()"><i class="fas fa-undo mr-2"></i>Annulla</button>
-      </div>
     </div>
+  </div>
+
+  <div class="d-block card-footer">
+    <button class="btn btn-primary mr-2" type="submit" (click)="save()"><i class="fas fa-save mr-2"></i>Salva</button>
+    <button class="btn btn-danger" type="button" (click)="undo()"><i class="fas fa-undo mr-2"></i>Annulla</button>
   </div>
 </div>
