--- a/FrontEnd/ClientApp/src/app/transfer/transfer.component.html
+++ b/FrontEnd/ClientApp/src/app/transfer/transfer.component.html
@@ -34,7 +34,7 @@
                 </select>
               </div>
               <div class="col-md-4 mb-3">
-                <label for="validationCustom03">Squadra Attuale</label>
+                <label for="validationCustom03">Nuova Squadra</label>
                 <select name="select-team-new" id="select-role" class="form-control" [(ngModel)]="selectedTeamNew">
                   <option *ngFor="let t of teams" [value]="t.id">{{t.name}}</option>
                 </select>
