--- a/FrontEnd/ClientApp/src/app/utility/utility.component.html
+++ b/FrontEnd/ClientApp/src/app/utility/utility.component.html
@@ -28,7 +28,6 @@
             </div>
           </div>
           <div class="card-body">
-            <!-- AGGIUNGERE DROPDOWN -->
             <p>Seleziona la squadra e importa i giocatori</p>
             <div class="row">
               <div class="col-md-8">
@@ -56,6 +55,24 @@
           <div class="card-body">
             <p>Importa le giornate del campionato</p>
             <button class="btn btn-primary" (click)="importRounds()">Importa</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <!-- Import Category -->
+      <div class="col-md-4">
+        <div class="mb-3 card">
+          <div class="card-header-tab card-header-tab-animation card-header">
+            <div class="card-header-title">
+              <i class="header-icon lnr-apartment icon-gradient bg-love-kiss"> </i>
+              IMPORTA CATEGORIE
+            </div>
+          </div>
+          <div class="card-body">
+            <p>Importa da file Excel le categorie</p>
+            <button class="btn btn-primary" (click)="importCategories()">Importa</button>
           </div>
         </div>
       </div>
